...
                        android:layout_marginVertical="@dimen/user_item_vertical_margin"
                        android:elevation="4dp"
                        android:text="@{context.getString(viewmodel.currentFilteringLabel)}"
                        tools:text="Filtering" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/users_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:items="@{viewmodel.pagedItems}"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </LinearLayout>
...
